exports[`ObservationControlGridReducer creates LOAD_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/observationcontrol/LOAD"
  },
  Object {
    "result": Array [
      Object {
        "doneBy": "Test user",
        "doneDate": "1990-11-11",
        "eventType": "Observation",
        "registeredBy": undefined,
        "subEvents-parts": Array [
          Object {
            "eventType": "ObservationLightingCondition",
            "lightingCondition": "Veldig lyst idag",
            "note": "Skru ned lyset"
          },
          Object {
            "condition": "Mye alkohol",
            "eventType": "ObservationAlcohol",
            "note": "Tynn ut",
            "volume": "93.5"
          },
          Object {
            "eventType": "ObservationPest",
            "identification": "Banafluer i fruktkurven",
            "lifeCycles": Array [
              Object {
                "number": "3",
                "stage": "Puppeskinn"
              },
              Object {
                "number": "3",
                "stage": "Larva"
              }
            ],
            "note": "Eplecidereddik og Zalo"
          }
        ]
      },
      Object {
        "doneBy": "Test user",
        "doneDate": "1981-12-01",
        "eventType": "Control",
        "registeredBy": undefined,
        "subEvents-parts": Array [
          Object {
            "OK": true,
            "eventType": "ControlRelativeHumidity"
          },
          Object {
            "OK": true,
            "eventType": "ControlLightingCondition"
          },
          Object {
            "OK": false,
            "eventType": "ControlTemperature"
          },
          Object {
            "OK": false,
            "eventType": "ControlHypoxicAir"
          },
          Object {
            "OK": true,
            "eventType": "ControlAlcohol"
          }
        ]
      },
      Object {
        "doneBy": "Test user",
        "doneDate": "1994-02-21",
        "eventType": "Observation",
        "registeredBy": undefined,
        "subEvents-parts": Array [
          Object {
            "eventType": "ObservationMold",
            "mold": "Muggent",
            "note": "Eddik"
          },
          Object {
            "cleaning": "Urent",
            "eventType": "ObservationCleaning",
            "note": "Her må der vaskes bedre"
          },
          Object {
            "eventType": "ObservationPest",
            "identification": "Sommerfugler i under takbjelken",
            "lifeCycles": Array [
              Object {
                "number": "1",
                "stage": "Puppe"
              },
              Object {
                "number": "3",
                "stage": "Larva"
              }
            ],
            "note": "Gasses"
          }
        ]
      },
      Object {
        "doneBy": "Test user",
        "doneDate": "1891-12-01",
        "eventType": "Control",
        "registeredBy": undefined,
        "subEvents-parts": Array [
          Object {
            "OK": true,
            "eventType": "ControlCleaning"
          },
          Object {
            "OK": true,
            "eventType": "ControlHypoxicAir"
          },
          Object {
            "OK": false,
            "eventType": "ControlGass"
          },
          Object {
            "OK": false,
            "eventType": "ControlHypoxicAir"
          },
          Object {
            "OK": true,
            "eventType": "ControlPest"
          }
        ]
      }
    ],
    "type": "musit/observationcontrol/LOAD_SUCCESS"
  }
]
`;

exports[`ObservationControlGridReducer observation control: fail action 1`] = `
Object {
  "data": Array [],
  "error": [Error: Some error to load observation control data.],
  "loaded": false,
  "loading": false
}
`;

exports[`ObservationControlGridReducer observation control: initial action 1`] = `
Object {
  "data": Array [],
  "loaded": false,
  "loading": true
}
`;

exports[`ObservationControlGridReducer observation control: no action 1`] = `
Object {
  "data": Array []
}
`;

exports[`ObservationControlGridReducer observation control: success action 1`] = `
Object {
  "data": Object {
    "someField": 1
  },
  "loaded": true,
  "loading": false
}
`;
